<resources>
    // buttons in main
    <string name="app_name">yuhang1-FeelsBook</string>
    <string name="button_love">Love</string>
    <string name="button_joy">Joy</string>
    <string name="button_surprise">surprise</string>
    <string name="button_anger">anger</string>
    <string name="button_sadness">sadness</string>
    <string name="button_fear">fear</string>
    <string name="button_count">count</string>
    <string name="button_history">history</string>

    // text in count
    <string name="LOVE_counts">LOVE counts:</string>
    <string name="JOY_counts">JOY counts:</string>
    <string name="SURPRISE_counts">SURPRISE counts:</string>
    <string name="ANGER_counts">ANGER counts:</string>
    <string name="SADNESS_counts">SADNESS counts:</string>
    <string name="FEAR_counts">FEAR counts:</string>

    // text in comment
    <string name="submit">Submit</string>
    <string name="no_comment">No comment</string>

    // text in history_list

</resources>
