<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Love"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_love"
        app:layout_constraintBaseline_toBaselineOf="@+id/Joy"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Joy"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_joy"
        app:layout_constraintBottom_toTopOf="@+id/Sadness"
        app:layout_constraintEnd_toStartOf="@+id/Surprise_count"
        app:layout_constraintStart_toEndOf="@+id/Love"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <Button
        android:id="@+id/Fear"
        android:layout_width="104dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_fear"
        app:layout_constraintBaseline_toBaselineOf="@+id/Sadness"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Sadness"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_sadness"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Fear"
        app:layout_constraintStart_toEndOf="@+id/Anger"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <Button
        android:id="@+id/Anger"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_anger"
        app:layout_constraintBaseline_toBaselineOf="@+id/Sadness"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Count"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/History"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Anger"
        app:layout_constraintVertical_bias="0.395" />

    <Button
        android:id="@+id/Surprise_count"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_surprise"
        app:layout_constraintBaseline_toBaselineOf="@+id/Joy"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/History"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Count"
        app:layout_constraintTop_toBottomOf="@+id/Fear"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="390dp"
        android:layout_height="134dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="How's your Emotion?"
        android:textSize="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

</android.support.constraint.ConstraintLayout>