<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountActivity">

    <TextView
        android:id="@+id/Numer_love"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/LOVE_counts"
        app:layout_constraintBottom_toTopOf="@+id/Numer_joy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/Numer_joy"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/JOY_counts"
        app:layout_constraintBottom_toTopOf="@+id/Numer_surprise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numer_love" />

    <TextView
        android:id="@+id/Numer_anger"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ANGER_counts"
        app:layout_constraintBottom_toTopOf="@+id/Numer_sadness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numer_surprise" />

    <TextView
        android:id="@+id/Numer_sadness"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/SADNESS_counts"
        app:layout_constraintBottom_toTopOf="@+id/Numer_fear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numer_anger" />

    <TextView
        android:id="@+id/Numer_fear"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/FEAR_counts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numer_sadness" />

    <TextView
        android:id="@+id/Numer_surprise"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/SURPRISE_counts"
        app:layout_constraintBottom_toTopOf="@+id/Numer_anger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numer_joy" />

    <TextView
        android:id="@+id/Love_count"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/Numer_love"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Joy_count"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/Numer_joy"
        app:layout_constraintTop_toBottomOf="@+id/Love_count" />

    <TextView
        android:id="@+id/Surprise_count"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/Numer_surprise"
        app:layout_constraintTop_toBottomOf="@+id/Joy_count" />

    <TextView
        android:id="@+id/Anger_count"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/Numer_anger"
        app:layout_constraintTop_toBottomOf="@+id/Surprise_count" />

    <TextView
        android:id="@+id/Sadness_count"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/Numer_sadness"
        app:layout_constraintTop_toBottomOf="@+id/Anger_count" />

    <TextView
        android:id="@+id/Fear_count"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/Numer_fear"
        app:layout_constraintTop_toBottomOf="@+id/Sadness_count"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />
</android.support.constraint.ConstraintLayout>